Package_Tools/include-C/alt/tcl8.6/tclDecls.pp

procedure Tcl_DeleteExitHandler(proc:PTcl_ExitProc; clientData:TClientData);cdecl;external;
{ 108  }
procedure Tcl_DeleteHashEntry(entryPtr:PTcl_HashEntry);cdecl;external;
{ 109  }
procedure Tcl_DeleteHashTable(tablePtr:PTcl_HashTable);cdecl;external;
{ 110  }
procedure Tcl_DeleteInterp(interp:PTcl_Interp);cdecl;external;
{ 111  }
procedure Tcl_DetachPids(numPids:longint; pidPtr:PTcl_Pid);cdecl;external;
{ 112  }
procedure Tcl_DeleteTimerHandler(token:TTcl_TimerToken);cdecl;external;
{ 113  }
procedure Tcl_DeleteTrace(interp:PTcl_Interp; trace:TTcl_Trace);cdecl;external;
{ 114  }
procedure Tcl_DontCallWhenDeleted(interp:PTcl_Interp; proc:PTcl_InterpDeleteProc; clientData:TClientData);cdecl;external;
{ 115  }
function Tcl_DoOneEvent(flags:longint):longint;cdecl;external;
{ 116  }
procedure Tcl_DoWhenIdle(proc:PTcl_IdleProc; clientData:TClientData);cdecl;external;
{ 117  }
(* Const before type ignored *)
function Tcl_DStringAppend(dsPtr:PTcl_DString; bytes:Pchar; length:longint):Pchar;cdecl;external;
{ 118  }
(* Const before type ignored *)
function Tcl_DStringAppendElement(dsPtr:PTcl_DString; element:Pchar):Pchar;cdecl;external;
{ 119  }
procedure Tcl_DStringEndSublist(dsPtr:PTcl_DString);cdecl;external;
{ 120  }
procedure Tcl_DStringFree(dsPtr:PTcl_DString);cdecl;external;
{ 121  }
procedure Tcl_DStringGetResult(interp:PTcl_Interp; dsPtr:PTcl_DString);cdecl;external;
{ 122  }
procedure Tcl_DStringInit(dsPtr:PTcl_DString);cdecl;external;
{ 123  }
procedure Tcl_DStringResult(interp:PTcl_Interp; dsPtr:PTcl_DString);cdecl;external;
{ 124  }
procedure Tcl_DStringSetLength(dsPtr:PTcl_DString; length:longint);cdecl;external;
{ 125  }
procedure Tcl_DStringStartSublist(dsPtr:PTcl_DString);cdecl;external;
{ 126  }
function Tcl_Eof(chan:TTcl_Channel):longint;cdecl;external;
{ 127  }
function Tcl_ErrnoId:Pchar;cdecl;external;
{ 128  }
function Tcl_ErrnoMsg(err:longint):Pchar;cdecl;external;
{ 129  }
(* Const before type ignored *)
function Tcl_Eval(interp:PTcl_Interp; script:Pchar):longint;cdecl;external;
{ 130  }
(* Const before type ignored *)
function Tcl_EvalFile(interp:PTcl_Interp; fileName:Pchar):longint;cdecl;external;
{ 131  }
function Tcl_EvalObj(interp:PTcl_Interp; objPtr:PTcl_Obj):longint;cdecl;external;
{ 132  }
procedure Tcl_EventuallyFree(clientData:TClientData; freeProc:PTcl_FreeProc);cdecl;external;
{ 133  }
procedure Tcl_Exit(status:longint);cdecl;external;
{ 134  }
(* Const before type ignored *)
(* Const before type ignored *)
function Tcl_ExposeCommand(interp:PTcl_Interp; hiddenCmdToken:Pchar; cmdName:Pchar):longint;cdecl;external;
{ 135  }
(* Const before type ignored *)
function Tcl_ExprBoolean(interp:PTcl_Interp; expr:Pchar; ptr:Plongint):longint;cdecl;external;
{ 136  }
function Tcl_ExprBooleanObj(interp:PTcl_Interp; objPtr:PTcl_Obj; ptr:Plongint):longint;cdecl;external;
{ 137  }
(* Const before type ignored *)
function Tcl_ExprDouble(interp:PTcl_Interp; expr:Pchar; ptr:Pdouble):longint;cdecl;external;
{ 138  }
function Tcl_ExprDoubleObj(interp:PTcl_Interp; objPtr:PTcl_Obj; ptr:Pdouble):longint;cdecl;external;
{ 139  }
(* Const before type ignored *)
function Tcl_ExprLong(interp:PTcl_Interp; expr:Pchar; ptr:Plongint):longint;cdecl;external;
{ 140  }
function Tcl_ExprLongObj(interp:PTcl_Interp; objPtr:PTcl_Obj; ptr:Plongint):longint;cdecl;external;
{ 141  }
function Tcl_ExprObj(interp:PTcl_Interp; objPtr:PTcl_Obj; resultPtrPtr:PPTcl_Obj):longint;cdecl;external;
{ 142  }
(* Const before type ignored *)
function Tcl_ExprString(interp:PTcl_Interp; expr:Pchar):longint;cdecl;external;
{ 143  }
procedure Tcl_Finalize;cdecl;external;
{ 144  }
(* Const before type ignored *)
procedure Tcl_FindExecutable(argv0:Pchar);cdecl;external;
{ 145  }
function Tcl_FirstHashEntry(tablePtr:PTcl_HashTable; searchPtr:PTcl_HashSearch):PTcl_HashEntry;cdecl;external;
{ 146  }
function Tcl_Flush(chan:TTcl_Channel):longint;cdecl;external;
{ 147  }
procedure Tcl_FreeResult(interp:PTcl_Interp);cdecl;external;
{ 148  }
(* Const before type ignored *)
function Tcl_GetAlias(interp:PTcl_Interp; childCmd:Pchar; targetInterpPtr:PPTcl_Interp; targetCmdPtr:PPchar; argcPtr:Plongint; 
           argvPtr:PPPchar):longint;cdecl;external;
{ 149  }
(* Const before type ignored *)
function Tcl_GetAliasObj(interp:PTcl_Interp; childCmd:Pchar; targetInterpPtr:PPTcl_Interp; targetCmdPtr:PPchar; objcPtr:Plongint; 
           objv:PPPTcl_Obj):longint;cdecl;external;
{ 150  }
(* Const before type ignored *)
function Tcl_GetAssocData(interp:PTcl_Interp; name:Pchar; procPtr:PPTcl_InterpDeleteProc):TClientData;cdecl;external;
{ 151  }
(* Const before type ignored *)
function Tcl_GetChannel(interp:PTcl_Interp; chanName:Pchar; modePtr:Plongint):TTcl_Channel;cdecl;external;
{ 152  }
function Tcl_GetChannelBufferSize(chan:TTcl_Channel):longint;cdecl;external;
{ 153  }
function Tcl_GetChannelHandle(chan:TTcl_Channel; direction:longint; handlePtr:PClientData):longint;cdecl;external;
{ 154  }
function Tcl_GetChannelInstanceData(chan:TTcl_Channel):TClientData;cdecl;external;
{ 155  }
function Tcl_GetChannelMode(chan:TTcl_Channel):longint;cdecl;external;
{ 156  }
function Tcl_GetChannelName(chan:TTcl_Channel):Pchar;cdecl;external;
{ 157  }
(* Const before type ignored *)
function Tcl_GetChannelOption(interp:PTcl_Interp; chan:TTcl_Channel; optionName:Pchar; dsPtr:PTcl_DString):longint;cdecl;external;
{ 158  }
function Tcl_GetChannelType(chan:TTcl_Channel):PTcl_ChannelType;cdecl;external;
{ 159  }
(* Const before type ignored *)
function Tcl_GetCommandInfo(interp:PTcl_Interp; cmdName:Pchar; infoPtr:PTcl_CmdInfo):longint;cdecl;external;
{ 160  }
function Tcl_GetCommandName(interp:PTcl_Interp; command:TTcl_Command):Pchar;cdecl;external;
{ 161  }
function Tcl_GetErrno:longint;cdecl;external;
{ 162  }
function Tcl_GetHostName:Pchar;cdecl;external;
{ 163  }
function Tcl_GetInterpPath(interp:PTcl_Interp; childInterp:PTcl_Interp):longint;cdecl;external;
{ 164  }
function Tcl_GetMaster(interp:PTcl_Interp):PTcl_Interp;cdecl;external;
{ 165  }
(* Const before type ignored *)
function Tcl_GetNameOfExecutable:Pchar;cdecl;external;
{ 166  }
function Tcl_GetObjResult(interp:PTcl_Interp):PTcl_Obj;cdecl;external;
{$if !defined(_WIN32) && !defined(MAC_OSX_TCL) /* UNIX */}
{ 167  }
(* Const before type ignored *)

function Tcl_GetOpenFile(interp:PTcl_Interp; chanID:Pchar; forWriting:longint; checkUsage:longint; filePtr:PClientData):longint;cdecl;external;
{$endif}
{ UNIX  }
{$ifdef MAC_OSX_TCL /* MACOSX */}
{ 167  }
(* Const before type ignored *)

function Tcl_GetOpenFile(interp:PTcl_Interp; chanID:Pchar; forWriting:longint; checkUsage:longint; filePtr:PClientData):longint;cdecl;external;
{$endif}
{ MACOSX  }
{ 168  }
(* Const before type ignored *)
